fix the overflow in ff

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -116,6 +116,7 @@ body {
 
 .full-height {
   height: 100%;
+  overflow-y: hidden;
 }
 
 .aside {
